--- a/README.Rmd
+++ b/README.Rmd
@@ -44,7 +44,7 @@ library(devtools)
 install_github("brazil-data-cube/rstac")
 ```
 
-```{r, echo=FALSE}
+```{r echo=TRUE, warning=FALSE, message=FALSE}
 library(rstac)
 library(magrittr) # for pipe (%>%) in examples
 ```
