--- a/README.Rmd
+++ b/README.Rmd
@@ -19,11 +19,12 @@ R Client Library for SpatioTemporal Asset Catalog (rstac)
 
 
 <!-- badges: start -->
-[![Software License](https://img.shields.io/badge/license-MIT-green)](https://github.com/brazil-data-cube/rstac/blob/master/LICENSE)
+[![CRAN status](https://www.r-pkg.org/badges/version/rstac)](https://cran.r-project.org/package=rstac)
 [![Travis build status](https://travis-ci.com/OldLipe/rstac.svg?branch=master)](https://travis-ci.com/OldLipe/rstac)
 [![Build status](https://ci.appveyor.com/api/projects/status/73w7h6u46l1587jj?svg=true)](https://ci.appveyor.com/project/OldLipe/rstac)
 [![codecov](https://codecov.io/gh/OldLipe/rstac/branch/master/graph/badge.svg)](https://codecov.io/gh/OldLipe/rstac)
 [![Software Life Cycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
+[![Software License](https://img.shields.io/badge/license-MIT-green)](https://github.com/brazil-data-cube/rstac/blob/master/LICENSE)
 [![Join us at Discord](https://img.shields.io/discord/689541907621085198?logo=discord&logoColor=ffffff&color=7389D8)](https://discord.com/channels/689541907621085198#)
 <!-- badges: end -->
 
@@ -35,6 +36,13 @@ As STAC spec is evolving fast and reaching its maturity, we plan update `rstac`
 to support upcoming STAC 1.0.0 version soon.
 
 ## Installation
+
+```{R, eval=FALSE}
+# install via CRAN 
+install.packages("rstac")
+```
+
+### Development version
 
 To install the development version of `rstac`, run the following commands
 
@@ -107,7 +115,7 @@ HTTP requests, allowing the use of tokens from the authorization protocols OAuth
 1.0 or 2.0 as well as other configuration options. In the code below, we present
 an example of how to pass a parameter token on a HTTP request.
 
-```{R, echo=TRUE}
+```{R, eval=FALSE}
 it_obj <- s_obj %>% 
     stac_search(collections = "CB4_64_16D_STK-1",
                 bbox = c(-47.02148, -12.98314, -42.53906, -17.35063)) %>%
