--- a/README.Rmd
+++ b/README.Rmd
@@ -21,19 +21,18 @@ R Client Library for SpatioTemporal Asset Catalog (rstac)
 <!-- badges: start -->
 [![Software License](https://img.shields.io/badge/license-MIT-green)](https://github.com/brazil-data-cube/rstac/blob/master/LICENSE)
 [![Build Status](https://drone.dpi.inpe.br/api/badges/brazil-data-cube/rstac/status.svg)](https://drone.dpi.inpe.br/brazil-data-cube/rstac)
-[![Build status](https://ci.appveyor.com/api/projects/status/73w7h6u46l1587jj?svg=true)](https://ci.appveyor.com/project/OldLipe/rstac)
-[![codecov](https://codecov.io/gh/brazil-data-cube/rstac/branch/master/graph/badge.svg?token=ILQLPW19UT)](https://codecov.io/gh/brazil-data-cube/rstac)
-[![Software Life Cycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
+[![Build status](https://ci.appveyor.com/api/projects/status/73w7h6u46l1587jj?svg=true)](https://ci.appveyor.com/project/OldLipe/rstac)<!-- [![codecov](https://codecov.io/gh/brazil-data-cube/rstac/branch/master/graph/badge.svg?token=ILQLPW19UT)](https://codecov.io/gh/brazil-data-cube/rstac) -->
+[![Software Life Cycle](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html)
 [![CRAN status](https://www.r-pkg.org/badges/version/rstac)](https://cran.r-project.org/package=rstac)
+[![STAC API](https://img.shields.io/badge/STAC%20API-v1.0.0-informational)](https://github.com/radiantearth/stac-api-spec)
 [![Join us at Discord](https://img.shields.io/discord/689541907621085198?logo=discord&logoColor=ffffff&color=7389D8)](https://discord.com/channels/689541907621085198#)
 <!-- badges: end -->
 
 STAC is a specification of files and web services used to describe geospatial 
 information assets. The specification can be consulted in [https://stacspec.org/](https://stacspec.org/).
 
-R client library for STAC (`rstac`) was designed to fully support STAC v0.8.1 and v0.9.0. 
-As STAC spec is evolving fast and reaching its maturity, we plan update `rstac` 
-to support upcoming STAC 1.0.0 version soon.
+R client library for STAC (`rstac`) was designed to fully support STAC API v1.0.0.
+It also supports earlier versions (>= v0.8.0).
 
 ## Installation
 
@@ -68,13 +67,15 @@ library(magrittr) # for pipe (%>%) in examples
 ```{R, echo=FALSE}
 
 tribble(
-  ~"**STAC** endpoints", ~"`rstac` functions",
-  "`/stac`", "`stac()`",
-  "`/collections`", "`collections()`",
-  "`/collections/{collectionId}`", "`collections(collection_id)`",
-  "`/collections/{collectionId}/items`", "`items()`",
-  "`/collections/{collectionId}/items/{itemId}`", "`items(feature_id)`",
-  "`/stac/search`", "`stac_search()`"
+  ~"**STAC** endpoints", ~"`rstac` functions", ~"API version",
+  "`/`", "`stac()`", ">= 0.9.0",
+  "`/stac`", "`stac()`", "< 0.9.0",
+  "`/collections`", "`collections()`",  ">= 0.9.0",
+  "`/collections/{collectionId}`", "`collections(collection_id)`", ">= 0.9.0",
+  "`/collections/{collectionId}/items`", "`items()`", ">= 0.9.0",
+  "`/collections/{collectionId}/items/{itemId}`", "`items(feature_id)`", ">= 0.9.0",
+  "`/search`", "`stac_search()`", ">= 0.9.0",
+  "`/stac/search`", "`stac_search()`", "< 0.9.0"
 ) %>% as.data.frame() %>% knitr::kable(format = "markdown")
 ```
 
@@ -169,7 +170,7 @@ download_items <- it_obj %>%
 
 The `rstac` package was implemented based on an extensible architecture, so 
 feel free to contribute by implementing new STAC API 
-[extensions](https://github.com/radiantearth/stac-spec/tree/v0.9.0/api-spec/extensions) 
+[extensions/fragments](https://github.com/radiantearth/stac-api-spec/tree/master/fragments) 
 based on the STAC API specifications.
 
 1. Make a project
@@ -185,7 +186,7 @@ API extension as an example.
 
 ## Getting help
 
-You can get a full explanation about each STAC (v0.9.0) endpoint at [STAC spec GitHub](https://github.com/radiantearth/stac-spec/tree/v0.9.0). A detailed
+You can get a full explanation about each STAC (v1.0.0) endpoint at [STAC API spec](https://github.com/radiantearth/stac-api-spec/tree/master/ogcapi-features). A detailed
 documentation with examples on how to use each endpoint and other functions
 available in the `rstac` package can be obtained by typing `?rstac` in R 
 console.
