--- a/README.Rmd
+++ b/README.Rmd
@@ -97,7 +97,7 @@ entry is an available collection that can be accessed via STAC API.
 
 In the code bellow, we get some STAC items of `MOD13Q1` collection that
 intersects the bounding box passed to the `bbox` parameter. To do this, we
-call the `stac_search` function that implements the STAC `/stac/search` 
+call the `stac_search` function that implements the STAC `/search` 
 endpoint. The returned document is a STAC Item Collection (a geojson 
 containing a feature collection).
 
@@ -129,8 +129,7 @@ extra functions for handling items and to bulk download the assets.
 ### Items functions
 
 `rstac` provides some functions to facilitates the interaction with STAC data.
-In the example bellow, we get how many items matched the search criteria, 
-which shows `210`:
+In the example bellow, we get how many items matched the search criteria:
 
 ```{R, echo=TRUE}
 # it_obj variable from the last code example
