--- a/README.Rmd
+++ b/README.Rmd
@@ -21,7 +21,7 @@ R Client Library for SpatioTemporal Asset Catalog (rstac)
 <!-- badges: start -->
 [![Software License](https://img.shields.io/badge/license-MIT-green)](https://github.com/brazil-data-cube/rstac/blob/master/LICENSE)
 [![Build Status](https://drone.dpi.inpe.br/api/badges/brazil-data-cube/rstac/status.svg)](https://drone.dpi.inpe.br/brazil-data-cube/rstac)
-[![Build status](https://ci.appveyor.com/api/projects/status/73w7h6u46l1587jj?svg=true)](https://ci.appveyor.com/project/OldLipe/rstac)<!-- [![codecov](https://codecov.io/gh/brazil-data-cube/rstac/branch/master/graph/badge.svg?token=ILQLPW19UT)](https://codecov.io/gh/brazil-data-cube/rstac) -->
+[![Build status](https://ci.appveyor.com/api/projects/status/73w7h6u46l1587jj?svg=true)](https://ci.appveyor.com/project/OldLipe/rstac) [![codecov](https://codecov.io/gh/brazil-data-cube/rstac/branch/master/graph/badge.svg?token=ILQLPW19UT)](https://codecov.io/gh/brazil-data-cube/rstac)
 [![Software Life Cycle](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html)
 [![CRAN status](https://www.r-pkg.org/badges/version/rstac)](https://cran.r-project.org/package=rstac)
 [![STAC API](https://img.shields.io/badge/STAC%20API-v1.0.0-informational)](https://github.com/radiantearth/stac-api-spec)
@@ -95,7 +95,7 @@ Cube STAC web service. The `get_request` method makes a HTTP GET connection
 to it and retrieves a STAC Catalog document from the server. Each `links` 
 entry is an available collection that can be accessed via STAC API.
 
-In the code bellow, we get some STAC items of `MOD13Q1` collection that
+In the code bellow, we get some STAC items of `CB4_64_16D_STK-1` collection that
 intersects the bounding box passed to the `bbox` parameter. To do this, we
 call the `stac_search` function that implements the STAC `/search` 
 endpoint. The returned document is a STAC Item Collection (a geojson 
