--- a/README.Rmd
+++ b/README.Rmd
@@ -189,3 +189,13 @@ You can get a full explanation about each STAC (v1.0.0) endpoint at [STAC API sp
 documentation with examples on how to use each endpoint and other functions
 available in the `rstac` package can be obtained by typing `?rstac` in R 
 console.
+
+## Citation
+
+To cite rstac in publications use:
+
+R. Simoes, F. C. de Souza, M. Zaglia, G. R. de Queiroz, R. D. C. dos Santos
+  and K. R. Ferreira, "Rstac: An R Package to Access Spatiotemporal Asset
+  Catalog Satellite Imagery," 2021 IEEE International Geoscience and Remote
+  Sensing Symposium IGARSS, 2021, pp. 7674-7677, doi:
+  10.1109/IGARSS47720.2021.9553518.
