--- a/README.Rmd
+++ b/README.Rmd
@@ -103,7 +103,9 @@ endpoint. The returned document is a STAC Item Collection (a geojson
 containing a feature collection).
 
 ```{R, echo=TRUE}
-it_obj <- s_obj %>% 
+
+it_obj <- s_obj %>%
+    stac_search(limit = 5) %>% 
     stac_search(collections = "CB4_64_16D_STK-1",
                 bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) %>%
     get_request()
@@ -123,12 +125,29 @@ it_obj <- s_obj %>%
     get_request(add_headers("x-api-key" = "MY-TOKEN"))
 ```
 
+### CQL2 query filter
+
+`rstac` also supports advanced query filter using common query language (CQL2).
+Users can write complex filter expressions using R code in an easy and 
+natural way.
+
+```{R, echo=TRUE}
+s_obj <- stac("https://planetarycomputer.microsoft.com/api/stac/v1")
+
+it_obj <- s_obj %>% 
+  ext_filter(
+    collection == "sentinel-2-l2a" && `s2:vegetation_percentage` >= 50 &&
+      `eo:cloud_cover` <= 10
+  ) %>% 
+  post_request()
+```
+
 In addition to the functions mentioned above, the `rstac` package provides some 
 extra functions for handling items and to bulk download the assets.
 
 ### Items functions
 
-`rstac` provides some functions to facilitates the interaction with STAC data.
+`rstac` provides some functions that facilitates the interaction with STAC data.
 In the example bellow, we get how many items matched the search criteria:
 
 ```{R, echo=TRUE}
