--- a/vignettes/cql2-report.Rmd
+++ b/vignettes/cql2-report.Rmd
@@ -2,7 +2,10 @@
 title: "rstac CQL2 extension development report"
 author: "Gilberto Camara, Rolf Simoes, and Felipe Carvalho"
 date: "2022-12-01"
-output: rmarkdown::html_vignette
+output: 
+  bookdown::html_document2: default
+bibliography: rstac-report.bib
+link-citations: yes
 vignette: >
   %\VignetteIndexEntry{cql2-report}
   %\VignetteEngine{knitr::rmarkdown}
@@ -18,46 +21,46 @@ knitr::opts_chunk$set(
 ```
 
 
-## Introduction
+# Introduction
 
-Earth observation images is one of the most reliable and consistent way to monitor Earth surface. Last decades, the number of orbital instruments for Earth observation has increased [cite]. Cloud computing has been adopted by industry and academy to store, access, process, and distribute big Earth observation data [cite]. In this context, Spatio-temporal Assets Catalog (STAC) [link] is becoming a standard to describe and search in satellite imagery service providers. 
+Earth observation images is one of the most reliable and consistent way to monitor Earth surface. In the last decades, the number of orbital instruments for Earth observation has increased [@finer_combating_2018]. Cloud computing has been adopted by industry and academy to store, access, process, and distribute big Earth observation data [@wagemann_user_2021]. In this context, Spatio-temporal Assets Catalog (STAC) [https://stacspec.org] is becoming a standard to describe and search in satellite imagery service providers. 
 
-STAC is an OGC API Features (OAFeat) [link] compliant standard. STAC enables users to search and access satellite images using a client. One of main characteristics of STAC is its core simplicity that supports basic search functionality. The standard also enables the development of new extensions to support more specific and complex functionality, as for example, Common Query Language 2 (CQL2) extension [link].
+STAC is an OGC API Features (OAFeat) [@ogc_ogc_2019] compliant standard. STAC enables users to search and access satellite images using a client. One of main characteristics of STAC is its core simplicity that supports basic search functionality. The standard also enables the development of new extensions to support more specific and complex functionality, as for example, Common Query Language 2 (CQL2) extension [@ogc_common_2022].
 
-CQL2 is part of OAFeat standard that provides a complex way to search and retrieve spatial-temporal assets. Using CQL2 in a STAC service, users can search for spatial assets using a variety of metadata information such as cloud cover and spatial relations. CQL2 is a powerful query language that enables users to create complex filtering criterias in a expressive way.
+CQL2 is part of OAFeat standard that provides a complex way to search and retrieve spatial-temporal assets. Using CQL2 in a STAC service, users can search for spatial assets using a variety of metadata information such as cloud cover and spatial relations. CQL2 is a powerful query language that enables users to create complex filtering criteria in a expressive way.
 
-In R language, rstac package is so far the unique client to support STAC services [link]. rstac provides a basic functionality to STAC core. This report shows the final status on CQL2 extension development in rstac. It also describes the activities realized in the course of the project and how CQL2 works in rstac package. Current version of the rstac package can be accessed at https://github.com/brazil-data-cube/rstac.
+In R language, rstac package is so far the unique client to support STAC services [@simoes_rstac_2021]. rstac provides a basic functionality to STAC core. This report shows the final status on CQL2 extension development in rstac. It also describes the activities realized in the course of the project and how CQL2 works in rstac package. Current version of the rstac package can be accessed at https://github.com/brazil-data-cube/rstac.
 
-## Project status
+# Project status
 
 This section reports the final project status on the development of CQL2 capability in rstac package. We describe each project's milestones in following topics.
 
-### Milestone 1 - Proof of concept version with examples that validate the idea of using the package
+## Milestone 1 - Proof of concept version with examples that validate the idea of using the package
 
 Status: concluded. 
 
-We used the abstract syntax tree (AST) of R language [cite] to develop the CQL2 extension in rstac. In computer science, AST is a way to represent an language expression in a formal way using data structures [cite]. AST representation informs the precedence on which and how a identifier will be evaluated. AST can be used to translate code from a language to other. The advantage of this approach is that users can focus on filtering criteria putting less effort in checking the syntax consistency. Using R environments and lexical scoping, AST gave us a powerful way for translating R code into CQL2 query. This approach showed to be consistent with CQL2 standard. We provide some examples of code translation in appendix A.
+We used the abstract syntax tree (AST) of R language to develop the CQL2 extension in rstac. In computer science, AST is a way to represent an language expression in a formal way using data structures. AST representation informs the precedence on which and how a identifier will be evaluated. AST can be used to translate code from a language to other [@wickham_hadley_advanced_2019]. The advantage of this approach is that users can focus on filtering criteria putting less effort in checking the syntax consistency. Using R environments and lexical scoping, AST gave us a powerful way for translating R code into CQL2 query. This approach showed to be consistent with CQL2 standard. We provide some examples of code translation in appendix A.
 
 
-### Milestone 2 - Implementing integration testing with STAC services supporting CQL2
+## Milestone 2 - Implementing integration testing with STAC services supporting CQL2
 
 Status: concluded. 
 
 One of main tasks we dedicated effort in this project was implement integration tests. CQL2 standard provides a broad conformance tests [cite]. We have implemented most of tests targeting test dataset. The test dataset used in rstac conformance tests is provided by "Test Dataset for the CQL2 Test Suite" [https://cql2test.ldproxy.net/ne110m4cql2]. It is derived from Natural Earth [https://www.naturalearthdata.com], a public domain dataset containing features from three layers of the original data at scale 1:110 million: `ne_110m_admin_0_countries`, `ne_110m_populated_places_simple`, and `ne_110m_rivers_lake_centerlines`. Besides this test suite, we also have implemented tests using Microsoft Planetary Computer STAC service [https://planetarycomputer.microsoft.com/api/stac/v1]. These tests were critical to detect bugs and inconsistencies along with software development. Current rstac version is passing in all of them, which asserts rstac robust compliance to CQL2 standard. The list of conformance tests implemented in rstac is listed in appendix B.
 
 
-### Milestone 3 - Pre-release version with documentation and testing
+## Milestone 3 - Pre-release version with documentation and testing
 
 Status: concluded. 
 
 We pushed a pre-released version of rstac into its Github repository. This version passed in all conformance tests referenced in previous topic. CQL2 filtering functionality is implemented in `ext_filter()` function. We have write a function documentation available in `?ext_filter()` in R console. Besides function description and parameters details, the documentation provides examples on how to use CQL2 filtering function using rstac package in actual STAC services.
 
-### Milestone 4 - CRAN submission and tutorial creation for users and developers.
+## Milestone 4 - CRAN submission and tutorial creation for users and developers.
 
 Status: partial.
 
 
-## Concluding remarks
+# Concluding remarks
 
 This report describes the status of the CQL2 extention development in rstac package. The project enumerates four milestones that were concluded as described above. Current version of the rstac package can be accessed at [https://github.com/brazil-data-cube/rstac] under MIT license. The rstac package is open to the community and follow the ”Contributor Covenant - version 1.0.0” code of conduct. 
 
@@ -66,13 +69,13 @@ To disseminate the new functionality implemented in the rstac package, we will c
 Para ajudar
 
 
-## Appendix A - CQL2 examples
+# Appendix A - CQL2 examples{-}
 
-### Introduction
+## Introduction{-}
 
 CQL2 is an OGC standard that enables complex filter expressions on OAFeat3 or STAC web services. CQL2 standard states that expressions can be represented in JSON or TEXT formats. Our implementation intends to convert native R expressions into CQL2 valid expressions without needing cumbersome nested lists or dictionaries. Also, we can make CQL2 filter requisition in JSON or TEXT formats with the same filter representation.
 
-### Translating R expressions to CQL2 syntax
+## Translating R expressions to CQL2 syntax{-}
 
 To explain the difference between the TEXT and JSON CQL2 representation, lets start with a simple example. In the following code, we have a valid CQL2 expression (in TEXT format) which refers to two properties, `vehicle_height` and `bridge_clearance`.
 
@@ -118,7 +121,7 @@ In both cases, the same CQL2 object representation is built from the expression 
 
 Sometimes, CQL2 filters in TEXT format is represented in the same way as in R expression. However this should not be always the case, as we can see in some examples provided below.
 
-### Data types and literal values
+### Data types and literal values{-}
 
 A literal value is any part of a CQL2 filter expression used the same as specified in the expression.
 
@@ -155,7 +158,7 @@ cql2_text(date("1969-07-20"))
 cql2_json(date("1969-07-20"))
 ```
 
-### Property references
+### Property references{-}
 
 The property of an item can be evaluated in the CQL2 filter expression by its name.
 
@@ -164,7 +167,7 @@ cql2_text(windSpeed > 1)
 cql2_json(windSpeed > 1)
 ```
 
-### Standard comparison predicates
+### Standard comparison predicates{-}
 
 A comparison predicate evaluates if two scalar expressions satisfy the specified comparison operator.
 
@@ -197,7 +200,7 @@ cql2_text(!is_null(geometry))
 cql2_json(!is_null(geometry))
 ```
 
-### Advanced comparison operators
+### Advanced comparison operators{-}
 
 A comparison predicate evaluates if two scalar expressions satisfy the specified comparison operator.
 
@@ -228,7 +231,7 @@ cql2_text(!category %in% list(1, 2, 3, 4))
 cql2_json(!category %in% list(1, 2, 3, 4))
 ```
 
-### Spatial operators
+### Spatial operators{-}
 
 A spatial predicate evaluates if two spatial expressions satisfy the specified spatial operator.
 
@@ -246,7 +249,7 @@ cql2_json(s_intersects(geometry, {{poly}}))
 
 > Note: We provide an escape to evaluate user variables using `{{` or `!!`. Both symbols are largely used in the R Data Science community.
 
-### Temporal operators
+### Temporal operators{-}
 
 A temporal predicate evaluates if two temporal expressions satisfy the specified temporal operator.
 
@@ -257,7 +260,7 @@ cql2_text(t_intersects(event_date, interval("1969-07-16T05:32:00Z", "1969-07-24T
 cql2_json(t_intersects(event_date, interval("1969-07-16T05:32:00Z", "1969-07-24T16:50:35Z")))
 ```
 
-### Support for functions in CQL2
+### Support for functions in CQL2{-}
 
 Functions allow implementations to extend the language.
 
@@ -270,7 +273,7 @@ cql2_json(s_within(road, Buffer(geometry, 10, "m")))
 
 
 
-## Appendix B - rstac CQL2 conformance tests
+# Appendix B - rstac CQL2 conformance tests{-}
 
 Here, we list the conformance tests implemented in rstac test suite. The tests run against "Test Dataset for the CQL2 Test Suite" [https://cql2test.ldproxy.net/ne110m4cql2] STAC service. rstac implements all conformance tests that have as its purpose to test predicates against the test dataset (except for conformance test #22, which is not present in "Test Dataset for the CQL2 Test Suite").
 
@@ -284,3 +287,4 @@ Here, we list the conformance tests implemented in rstac test suite. The tests r
 | #38 |  23 |
 | #45 |   7 |
 
+# References{-}
