--- a/README.Rmd
+++ b/README.Rmd
@@ -56,7 +56,6 @@ Importing `rstac` package:
 
 ```{r echo=TRUE, warning=FALSE, message=FALSE}
 library(rstac)
-library(magrittr) # for pipe (%>%) in examples
 ```
 
 
@@ -104,10 +103,10 @@ containing a feature collection).
 
 ```{R, echo=TRUE}
 
-it_obj <- s_obj %>%
-    stac_search(limit = 5) %>% 
+it_obj <- s_obj |>
+    stac_search(limit = 5) |> 
     stac_search(collections = "CB4_64_16D_STK-1",
-                bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) %>%
+                bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) |>
     get_request()
 
 it_obj
@@ -119,9 +118,9 @@ HTTP requests, allowing the use of tokens from the authorization protocols OAuth
 an example of how to pass a parameter token on a HTTP request.
 
 ```{R, eval=FALSE}
-it_obj <- s_obj %>% 
+it_obj <- s_obj |>
     stac_search(collections = "CB4_64_16D_STK-1",
-                bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) %>%
+                bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) |>
     get_request(add_headers("x-api-key" = "MY-TOKEN"))
 ```
 
@@ -129,16 +128,16 @@ it_obj <- s_obj %>%
 
 `rstac` also supports advanced query filter using common query language (CQL2).
 Users can write complex filter expressions using R code in an easy and 
-natural way.
+natural way. For a complete 
 
 ```{R, echo=TRUE}
 s_obj <- stac("https://planetarycomputer.microsoft.com/api/stac/v1")
 
-it_obj <- s_obj %>% 
+it_obj <- s_obj |> 
   ext_filter(
     collection == "sentinel-2-l2a" && `s2:vegetation_percentage` >= 50 &&
       `eo:cloud_cover` <= 10
-  ) %>% 
+  ) |>
   post_request()
 ```
 
