update cite in report

--- a/vignettes/cql2-report.Rmd
+++ b/vignettes/cql2-report.Rmd
@@ -64,7 +64,7 @@ We used the abstract syntax tree (AST) of R language to develop the CQL2 extensi
 
 Status: concluded. 
 
-One of main tasks we dedicated effort in this project was implement integration tests. CQL2 standard provides a broad conformance tests [cite]. We have implemented most of tests targeting test dataset. The test dataset used in rstac conformance tests is provided by "Test Dataset for the CQL2 Test Suite" [https://cql2test.ldproxy.net/ne110m4cql2]. It is derived from Natural Earth [https://www.naturalearthdata.com], a public domain dataset containing features from three layers of the original data at scale 1:110 million: `ne_110m_admin_0_countries`, `ne_110m_populated_places_simple`, and `ne_110m_rivers_lake_centerlines`. Besides this test suite, we also have implemented tests using Microsoft Planetary Computer STAC service [https://planetarycomputer.microsoft.com/api/stac/v1]. These tests were critical to detect bugs and inconsistencies along with software development. Current rstac version is passing in all of them, which asserts rstac robust compliance to CQL2 standard. The list of conformance tests implemented in rstac is listed in appendix B.
+One of main tasks we dedicated effort in this project was implement integration tests. CQL2 standard provides a broad conformance tests [@ogc_common_2022]. We have implemented most of tests targeting test dataset. The test dataset used in rstac conformance tests is provided by "Test Dataset for the CQL2 Test Suite" [https://cql2test.ldproxy.net/ne110m4cql2]. It is derived from Natural Earth [https://www.naturalearthdata.com], a public domain dataset containing features from three layers of the original data at scale 1:110 million: `ne_110m_admin_0_countries`, `ne_110m_populated_places_simple`, and `ne_110m_rivers_lake_centerlines`. Besides this test suite, we also have implemented tests using Microsoft Planetary Computer STAC service [https://planetarycomputer.microsoft.com/api/stac/v1]. These tests were critical to detect bugs and inconsistencies along with software development. Current rstac version is passing in all of them, which asserts rstac robust compliance to CQL2 standard. The list of conformance tests implemented in rstac is listed in appendix B.
 
 
 ## Milestone 3 - Pre-release version with documentation and testing
