--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ output: github_document
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 
-```{r, include = FALSE}
+```{r setup, include=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -37,7 +37,7 @@ It also supports earlier versions (>= v0.8.0).
 
 ## Installation
 
-```{R, eval=FALSE}
+```{R install, eval=FALSE}
 # install via CRAN 
 install.packages("rstac")
 ```
@@ -46,7 +46,7 @@ install.packages("rstac")
 
 To install the development version of `rstac`, run the following commands
 
-```{R, eval=FALSE}
+```{R install-dev, eval=FALSE}
 # load necessary libraries
 library(devtools)
 install_github("brazil-data-cube/rstac")
@@ -54,7 +54,7 @@ install_github("brazil-data-cube/rstac")
 
 Importing `rstac` package:
 
-```{r echo=TRUE, warning=FALSE, message=FALSE}
+```{r load, echo=TRUE, message=FALSE, warning=FALSE}
 library(rstac)
 ```
 
@@ -64,7 +64,7 @@ library(rstac)
 `rstac` implements the following STAC endpoints:
 
 
-```{R, echo=FALSE}
+```{R endpoints, echo=FALSE}
 
 tribble(
   ~"**STAC** endpoints", ~"`rstac` functions", ~"API version",
@@ -80,11 +80,11 @@ tribble(
 ```
 
 These functions can be used to retrieve information from a STAC API service.
-The code bellow creates a `stac` object and list the available collections of 
+The code below creates a `stac` object and list the available collections of 
 the STAC API of the [Brazil Data Cube](http://brazildatacube.org/) project of 
 the Brazilian National Space Research Institute [INPE](http://www.inpe.br/).
 
-```{R, echo=TRUE}
+```{R stac-obj, echo=TRUE}
 s_obj <- stac("https://brazildatacube.dpi.inpe.br/stac/")
 
 get_request(s_obj)
@@ -95,19 +95,19 @@ Cube STAC web service. The `get_request` method makes a HTTP GET connection
 to it and retrieves a STAC Catalog document from the server. Each `links` 
 entry is an available collection that can be accessed via STAC API.
 
-In the code bellow, we get some STAC items of `CB4_64_16D_STK-1` collection that
+In the code below, we get some STAC items of `CB4_64_16D_STK-1` collection that
 intersects the bounding box passed to the `bbox` parameter. To do this, we
 call the `stac_search` function that implements the STAC `/search` 
 endpoint. The returned document is a STAC Item Collection (a geojson 
 containing a feature collection).
 
-```{R, echo=TRUE}
+```{R bdc-items1, echo=TRUE}
 
 it_obj <- s_obj |>
-    stac_search(limit = 5) |> 
-    stac_search(collections = "CB4_64_16D_STK-1",
-                bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) |>
-    get_request()
+  stac_search(collections = "CB4_64_16D_STK-1",
+              bbox = c(-47.02148, -17.35063, -42.53906, -12.98314),
+              limit = 100) |> 
+  get_request()
 
 it_obj
 ```
@@ -117,28 +117,11 @@ HTTP requests, allowing the use of tokens from the authorization protocols OAuth
 1.0 or 2.0 as well as other configuration options. In the code below, we present
 an example of how to pass a parameter token on a HTTP request.
 
-```{R, eval=FALSE}
+```{R bdc-items2, eval=FALSE}
 it_obj <- s_obj |>
-    stac_search(collections = "CB4_64_16D_STK-1",
-                bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) |>
-    get_request(add_headers("x-api-key" = "MY-TOKEN"))
-```
-
-### CQL2 query filter
-
-`rstac` also supports advanced query filter using common query language (CQL2).
-Users can write complex filter expressions using R code in an easy and 
-natural way. For a complete 
-
-```{R, echo=TRUE}
-s_obj <- stac("https://planetarycomputer.microsoft.com/api/stac/v1")
-
-it_obj <- s_obj |> 
-  ext_filter(
-    collection == "sentinel-2-l2a" && `s2:vegetation_percentage` >= 50 &&
-      `eo:cloud_cover` <= 10
-  ) |>
-  post_request()
+  stac_search(collections = "CB4_64_16D_STK-1",
+              bbox = c(-47.02148, -17.35063, -42.53906, -12.98314)) |>
+  get_request(add_headers("x-api-key" = "MY-TOKEN"))
 ```
 
 In addition to the functions mentioned above, the `rstac` package provides some 
@@ -147,26 +130,29 @@ extra functions for handling items and to bulk download the assets.
 ### Items functions
 
 `rstac` provides some functions that facilitates the interaction with STAC data.
-In the example bellow, we get how many items matched the search criteria:
+In the example below, we get how many items matched the search criteria:
 
-```{R, echo=TRUE}
+```{R bdc-items3, echo=TRUE}
 # it_obj variable from the last code example
-it_obj %>% items_matched()
+it_obj |> 
+  items_matched()
 ```
 
 However, if we count how many items there are in `it_obj` variable, we get `10`,
 meaning that more items could be fetched from the STAC service:
 
-```{R, echo=TRUE}
-it_obj %>% items_length()
+```{R bdc-items4, echo=TRUE}
+it_obj |> 
+  items_length()
 ```
 
 
-```{R, echo=TRUE}
+```{R bdc-items5, echo=TRUE}
 # fetch all items from server 
 # (but don't stored them back in it_obj)
-it_obj %>% items_fetch(progress = FALSE) %>%
-    items_length()
+it_obj <- it_obj |> 
+  items_fetch(progress = FALSE) |>
+  items_length()
 ```
 
 ### Download assets
@@ -175,13 +161,56 @@ All we've got in previous example was metadata to STAC Items, including
 links to geospatial data called `assets`. To download all `assets` in a
 STAC Item Collection we can use `assets_download()` function, that returns
 an update STAC Item Collection referring to the downloaded assets. The code
-bellow downloads the `thumbnail` assets (.png files) of `10` items stored in
+below downloads the `thumbnail` assets (.png files) of `10` items stored in
 `it_obj` variable.
 
-```{R, eval=FALSE} 
-download_items <- it_obj %>% 
-    assets_download(assets_name = "thumbnail")
+```{R download, eval=FALSE}
+download_items <- it_obj |>
+  assets_download(assets_name = "thumbnail", items_max = 10)
 ```
+
+### CQL2 query filter
+
+`rstac` also supports advanced query filter using common query language (CQL2).
+Users can write complex filter expressions using R code in an easy and 
+natural way. For a complete 
+
+```{R cql2, echo=TRUE}
+s_obj <- stac("https://planetarycomputer.microsoft.com/api/stac/v1")
+
+it_obj <- s_obj |> 
+  ext_filter(
+    collection == "sentinel-2-l2a" && `s2:vegetation_percentage` >= 50 &&
+      `eo:cloud_cover` <= 10 && `s2:mgrs_tile` == "20LKP" && 
+      anyinteracts(datetime, interval("2020-06-01", "2020-09-30"))
+  ) |>
+  post_request()
+```
+
+## Getting help
+
+You can get a full explanation about each STAC (v1.0.0) endpoint at [STAC API spec](https://github.com/radiantearth/stac-api-spec/tree/master/ogcapi-features). A detailed
+documentation with examples on how to use each endpoint and other functions
+available in the `rstac` package can be obtained by typing `?rstac` in R 
+console.
+
+## Citation
+
+To cite rstac in publications use:
+
+R. Simoes, F. C. de Souza, M. Zaglia, G. R. de Queiroz, R. D. C. dos Santos
+and K. R. Ferreira, "Rstac: An R Package to Access Spatiotemporal Asset
+Catalog Satellite Imagery," 2021 IEEE International Geoscience and Remote
+Sensing Symposium IGARSS, 2021, pp. 7674-7677, doi:
+10.1109/IGARSS47720.2021.9553518.
+
+## Acknowledgements for financial support
+
+We acknowledge and thank the project funders that provided financial and material support:
+
+- Amazon Fund, established by the Brazilian government with financial contribution from Norway, through the project contract between the Brazilian Development Bank (BNDES) and the Foundation for Science, Technology and Space Applications (FUNCATE), for the establishment of the Brazil Data Cube, process 17.2.0536.1.
+
+- Radiant Earth Foundation and STAC Project Steering Committee for the advance of STAC ecosystem programme.
 
 ## How to contribute?
 
@@ -200,20 +229,3 @@ can define how parameters must be submitted to the HTTP request and the types
 of the returned documents responses. See the implemented [ext_query](https://github.com/brazil-data-cube/rstac/blob/master/R/ext_query.R) 
 API extension as an example.  
 4. Make a [Pull Request](https://docs.github.com/en/github/collaborating-with-issues-and-pull-requests/creating-a-pull-request) on the branch [dev](https://github.com/OldLipe/rstac/tree/dev).
-
-## Getting help
-
-You can get a full explanation about each STAC (v1.0.0) endpoint at [STAC API spec](https://github.com/radiantearth/stac-api-spec/tree/master/ogcapi-features). A detailed
-documentation with examples on how to use each endpoint and other functions
-available in the `rstac` package can be obtained by typing `?rstac` in R 
-console.
-
-## Citation
-
-To cite rstac in publications use:
-
-R. Simoes, F. C. de Souza, M. Zaglia, G. R. de Queiroz, R. D. C. dos Santos
-  and K. R. Ferreira, "Rstac: An R Package to Access Spatiotemporal Asset
-  Catalog Satellite Imagery," 2021 IEEE International Geoscience and Remote
-  Sensing Symposium IGARSS, 2021, pp. 7674-7677, doi:
-  10.1109/IGARSS47720.2021.9553518.
