--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ R Client Library for SpatioTemporal Asset Catalog (rstac)
 [![Software License](https://img.shields.io/badge/license-MIT-green)](https://github.com/brazil-data-cube/rstac/blob/master/LICENSE)
 <!-- [![Build Status](https://drone.dpi.inpe.br/api/badges/brazil-data-cube/rstac/status.svg)](https://drone.dpi.inpe.br/brazil-data-cube/rstac) -->
 [![Build Status](https://cloud.drone.io/api/badges/OldLipe/rstac/status.svg)](https://cloud.drone.io/OldLipe/rstac)
-[![Build status](https://ci.appveyor.com/api/projects/status/73w7h6u46l1587jj?svg=true)](https://ci.appveyor.com/project/OldLipe/rstac) [![codecov](https://codecov.io/gh/brazil-data-cube/rstac/branch/master/graph/badge.svg?token=ILQLPW19UT)](https://app.codecov.io/gh/brazil-data-cube/rstac)
+<!-- [![Build status](https://ci.appveyor.com/api/projects/status/73w7h6u46l1587jj?svg=true)](https://ci.appveyor.com/project/OldLipe/rstac) --> [![codecov](https://codecov.io/gh/brazil-data-cube/rstac/branch/master/graph/badge.svg?token=ILQLPW19UT)](https://app.codecov.io/gh/brazil-data-cube/rstac)
 [![Software Life Cycle](https://img.shields.io/badge/lifecycle-stable-brightgreen.svg)](https://lifecycle.r-lib.org/articles/stages.html)
 [![CRAN status](https://www.r-pkg.org/badges/version/rstac)](https://cran.r-project.org/package=rstac)
 [![STAC API](https://img.shields.io/badge/STAC%20API-v1.0.0-informational)](https://github.com/radiantearth/stac-api-spec)
@@ -66,7 +66,7 @@ library(rstac)
 
 ```{R endpoints, echo=FALSE}
 
-tribble(
+tibble::tribble(
   ~"**STAC** endpoints", ~"`rstac` functions", ~"API version",
   "`/`", "`stac()`", ">= 0.9.0",
   "`/stac`", "`stac()`", "< 0.9.0",
@@ -153,7 +153,9 @@ it_obj |>
 # fetch all items from server 
 # (but don't stored them back in it_obj)
 it_obj <- it_obj |> 
-  items_fetch(progress = FALSE) |>
+  items_fetch(progress = FALSE) 
+
+it_obj |>
   items_length()
 ```
 
