--- a/vignettes/cql2-example.Rmd
+++ b/vignettes/cql2-example.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "rstac CQL2 examples"
-author: "Gilberto Camara, Rolf Simoes, and Felipe Carvalho"
+author: "Rolf Simoes, Felipe Carvalho, and Gilberto Camara"
 date: "2022-12-16"
 output: 
   html_document:
