--- a/vignettes/cql2-mpc-examples.Rmd
+++ b/vignettes/cql2-mpc-examples.Rmd
@@ -9,7 +9,7 @@ classoption: x11names
 indent: yes
 link-citations: yes
 vignette: >
-  %\VignetteIndexEntry{cql2-report}
+  %\VignetteIndexEntry{cql2-mpc-examples}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
