--- a/README.Rmd
+++ b/README.Rmd
@@ -77,7 +77,7 @@ tibble::tribble(
   "`/collections/{collectionId}/items/{itemId}`", "`items(feature_id)`", ">= 0.9.0",
   "`/search`", "`stac_search()`", ">= 0.9.0",
   "`/stac/search`", "`stac_search()`", "< 0.9.0",
-  "`/conformance`", "`stac_search()`", ">= 0.9.0",
+  "`/conformance`", "`conformance()`", ">= 0.9.0",
   "`/collections/{collectionId}/queryables`", "`queryables()`", ">= 1.0.0"
 ) %>% as.data.frame() %>% knitr::kable(format = "markdown")
 ```
