--- a/vignettes/rstac-intro.Rmd
+++ b/vignettes/rstac-intro.Rmd
@@ -29,12 +29,12 @@ knitr::opts_chunk$set(
 
 ```{r setup, echo=FALSE}
 library(rstac)
+library(tibble)
 ```
 
 # About rstac
 
-This document will introduce the concepts of using the `rstac` package.
-The R client library for STAC (`rstac`) fully supports STAC API v1.0.0 and its earlier versions (>= v0.8.0).
+This document will introduce the concepts of the `rstac` package. `rstac` is an R client library for STAC that fully supports STAC API v1.0.0 and its earlier versions (>= v0.8.0).
 
 The table shows the functions implemented by the `rstac` package according to 
 the STAC API endpoints. For each endpoint, `rstac` has a specialized implementation. 
@@ -42,28 +42,26 @@ the STAC API endpoints. For each endpoint, `rstac` has a specialized implementat
 
 ```{R endpoints, echo=FALSE}
 
-tibble::tribble(
-  ~"**STAC** endpoints", ~"`rstac` functions", ~"API version",
-  "`/`", "`stac()`", ">= 0.9.0",
-  "`/stac`", "`stac()`", "< 0.9.0",
-  "`/collections`", "`collections()`",  ">= 0.9.0",
-  "`/collections/{collectionId}`", "`collections(collection_id)`", ">= 0.9.0",
-  "`/collections/{collectionId}/items`", "`items()`", ">= 0.9.0",
-  "`/collections/{collectionId}/items/{itemId}`", "`items(feature_id)`", ">= 0.9.0",
-  "`/search`", "`stac_search()`", ">= 0.9.0",
-  "`/stac/search`", "`stac_search()`", "< 0.9.0",
-  "`/conformance`", "`conformance()`", ">= 0.9.0",
-  "`/collections/{collectionId}/queryables`", "`queryables()`", ">= 1.0.0"
-) %>% as.data.frame() %>% knitr::kable(format = "markdown")
+data.frame(
+  "**STAC** endpoints"   = c(
+    "`/`", "`/stac`","`/collections`", "`/collections/{collectionId}`", 
+    "`/collections/{collectionId}/items`", "`/collections/{collectionId}/items/{itemId}`", "`/search`", "`/stac/search`",
+    "`/conformance`", "`/collections/{collectionId}/queryables`"
+  ), "`rstac` functions" = c(
+    "`stac()`", "`stac()`", "`collections()`", "`collections(collection_id)`",
+    "`items()`", "`items(feature_id)`", "`stac_search()`", "`stac_search()`",
+    "`conformance()`", "`queryables()`"
+  ), "API version"      = c(
+    ">= 0.9.0", "< 0.9.0", ">= 0.9.0", ">= 0.9.0", ">= 0.9.0", ">= 0.9.0",
+    ">= 0.9.0", "< 0.9.0", ">= 0.9.0", ">= 1.0.0"
+  ),
+  check.names = FALSE
+) %>% knitr::kable(format = "markdown")
 ```
-
-Besides, the `rstac` package provides several auxiliary functions for `STACItem` and `STACItemCollection` objects. These auxiliary functions operate at the item or 
-asset level. Functions dedicated to items have the prefix `items_`. Otherwise, 
-asset-oriented functions have the prefix `assets_`
 
 The `rstac` package performs the requests explicitly. This way, 
 the pipeline of the `rstac` is composed of two steps.
-The first step consists of creating a query based on the concatenation of functions that build the endpoint that will be requested. The second step consists of requesting the constructed query.
+The first step consists of creating a query based on the concatenation of functions that builds an endpoint. The second step consists of requesting the constructed endpoint.
 
 ## Getting started
 
@@ -75,23 +73,23 @@ install.packages("rstac")
 
 ## Creating queries
 
-In this tutorial we will use the STAC API made available by the Brazil Data Cube project (BDC). BDC is a research, development and technological innovation project of the National Institute for Space Research (INPE), Brazil. It is producing data sets from big volumes of medium-resolution remote sensing images for the entire national territory and developing a computational platform to process and analyze these data sets using artificial intelligence, machine learning and image time series analysis.
+This tutorial use the STAC API made available by the [Brazil Data Cube (BDC)](http://www.brazildatacube.org/en/home-page-2/) project. BDC is a research, development, and technological innovation project of the National Institute for 
+Space Research (INPE), Brazil.
 
-`rstac` implements a parent object to create queries so that we can work on a higher level of abstraction. This way, to check the class of an R object, use `class()`. If you want to see information about the created object, use `print()`.
+Let's start by creating a query for the BDC catalog.
 
 ```{r queries-1}
 s_obj <- stac("https://brazildatacube.dpi.inpe.br/stac/")
 s_obj
 ```
-The `RSTACQuery` class object stores the metadata of the query being created.
-This metadata can be accessed at any time during query creation.
+The `RSTACQuery` class object stores the metadata of the created query.
+This metadata can be accessed as a list element during query creation.
 
 ```{r}
 s_obj$base_url
 ```
 To create the desired query, compose the queries with functions that implement the endpoint that is intended to be requested. 
 Some examples are shown below:
-
 
 ```{r queries-2}
 s_obj |> collections()
@@ -121,12 +119,13 @@ s_obj |>
 
 ## Making requests
 
-The defined query can be requested after it has been created. 
+The defined query can be requested after its creation. 
 `rstac` package supports **GET** and **POST** HTTP 
 methods. With future updates to the STAC specifications, it is intended to 
 support other methods such as **PUT** and **DELETE**. 
-In addition, it is possible to make requests through TOKENS, as will be 
-demonstrated in the examples.
+In addition, it is possible to add more configuration options to the request, 
+such as headers (`httr::add_headers()`) and cookies (`httr::set_cookies()`). 
+These options are available in the `httr` package documentation in the [`config`](https://httr.r-lib.org/reference/config.html).
 
 ### HTTP GET: `get_request()`
 
@@ -145,8 +144,7 @@ s_obj |>
   post_request()
 ```
 
-We can provide additional arguments to HTTP verbs using, such as [add_headers][httr::add_headers] or [set_cookies][httr::set_cookies]. These 
-arguments are available in the `httr` package documentation.
+Example of providing an additional argument to HTTP verb in a request:
 
 ```{r request-3}
 s_obj |> 
@@ -188,6 +186,11 @@ s_obj |>
   stac_search(collections = c("CB4_64_16D_STK", "S2-16D-2")) |>
   get_request()
 ```
+
+
+Besides, the `rstac` package provides several auxiliary functions for `STACItem` and `STACItemCollection` objects. These auxiliary functions operate at the item or 
+asset level. Functions dedicated to items have the prefix `items_`. Otherwise, 
+asset-oriented functions have the prefix `assets_`
 
 ## Items functions
 
