--- a/README.Rmd
+++ b/README.Rmd
@@ -84,7 +84,7 @@ tibble::tribble(
 
 These functions can be used to retrieve information from a STAC API service.
 The code below creates a `stac` object and list the available collections of 
-the STAC API of the [Brazil Data Cube](http://brazildatacube.org/) project of 
+the STAC API of the [Brazil Data Cube](http://www.brazildatacube.org/en/home-page-2/) project of 
 the Brazilian National Space Research Institute [INPE](http://www.inpe.br/).
 
 ```{R stac-obj, echo=TRUE}
