--- a/vignettes/cql2-mpc-examples.Rmd
+++ b/vignettes/cql2-mpc-examples.Rmd
@@ -164,7 +164,7 @@ We can load up that single COG file using packages like [stars](https://github.c
 library(stars)
 selected_item |> 
   assets_url(asset_names = "blue", append_gdalvsi = TRUE) |>
-  stars::read_stars() |>
+  stars::read_stars(RasterIO = list(nBufXSize = 512, nBufYSize = 512)) |>
   plot(main = "blue")
 ```
 
