--- a/vignettes/rstac-intro.Rmd
+++ b/vignettes/rstac-intro.Rmd
@@ -193,11 +193,11 @@ Besides, the `rstac` package provides several auxiliary functions for `STACItem`
 The `STACItemCollection` object have some facilitating functions to manipulate/extract information, for example:
 
 - **`items_fields()`:** Lists fields names inside an item.
-- **`item_filter()`:** Performs a filter by items according to expressions operating on the properties of a `STACItemCollection` object.
-- **`item_fetch()`:** Performs the pagination of items.
-- **`item_length()`:** Returns the number of items in an object.
-- **`item_matched()`:** Returns the number of items matching the search criteria.
-- **`item_assets()`:** Returns the assets name from `STACItemCollection` and `STACItem` objects.
+- **`items_filter()`:** Performs a filter by items according to expressions operating on the properties of a `STACItemCollection` object.
+- **`items_fetch()`:** Performs the pagination of items.
+- **`items_length()`:** Returns the number of items in an object.
+- **`items_matched()`:** Returns the number of items matching the search criteria.
+- **`items_assets()`:** Returns the assets name from `STACItemCollection` and `STACItem` objects.
 
 
 It is interesting to verify the fields of items before filtering:
