--- a/vignettes/rstac-intro.Rmd
+++ b/vignettes/rstac-intro.Rmd
@@ -15,25 +15,25 @@ fontsize: 10,5pt
 indent: yes
 link-citations: yes
 vignette: >
-  %\VignetteIndexEntry{Introduction to rstac package}
+  %\VignetteIndexEntry{rstac-intro}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
-```{r, include = FALSE}
+```{r prepare, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   cache = TRUE
 )
+library(tibble)
 ```
 
 ```{r setup, echo=FALSE}
 library(rstac)
-library(tibble)
 ```
 
-# About rstac
+# About rstac{-}
 
 This document will introduce the concepts of the `rstac` package. `rstac` is an R client library for STAC that fully supports STAC API v1.0.0 and its earlier versions (>= v0.8.0).
 
@@ -62,7 +62,7 @@ data.frame(
 
 The `rstac` package makes the requests explicitly. The `rstac` pipeline creates the endpoints with function concatenations and then requests them.
 
-## Getting started
+## Getting started{-}
 
 Let's start by installing the `rstac` package:
 
@@ -70,7 +70,7 @@ Let's start by installing the `rstac` package:
 install.packages("rstac")
 ```
 
-## Creating queries
+## Creating queries{-}
 
 This tutorial use the STAC API made available by the [Brazil Data Cube (BDC)](http://www.brazildatacube.org/en/home-page-2/) project. BDC is a research, development, and technological innovation project of the National Institute for Space Research (INPE), Brazil.
 
@@ -83,17 +83,19 @@ s_obj
 The `RSTACQuery` object stores the metadata of the created query.
 This metadata can be accessed as a list element during query creation.
 
-```{r}
+```{r base-url}
 s_obj$base_url
 ```
 Endpoints are constructed through function concatenations provided by `rstac`. Some examples are shown below:
 
 ```{r queries-2}
-s_obj |> collections()
+s_obj |> 
+  collections()
 ```
 
 ```{r queries-3}
-s_obj |> collections("S2-16D-2")
+s_obj |> 
+  collections("S2-16D-2")
 ```
 
 ```{r queries-4}
@@ -114,7 +116,7 @@ s_obj |>
   ext_query("bdc:tile" == "022024")
 ```
 
-## Making requests
+## Making requests{-}
 
 `rstac` package supports **GET** and **POST** HTTP 
 methods. With future updates to the STAC specifications, it is intended to 
@@ -123,7 +125,7 @@ In addition, it is possible to add more configuration options to the request,
 such as headers (`httr::add_headers()`) and cookies (`httr::set_cookies()`). 
 These options are available in the `httr` package documentation in the [`config`](https://httr.r-lib.org/reference/config.html).
 
-### HTTP GET: `get_request()`
+### HTTP GET: `get_request()`{-}
 
 ```{r request-1}
 s_obj |>
@@ -132,13 +134,14 @@ s_obj |>
   get_request() 
 ```
 
-### HTTP POST: `post_request()`
+### HTTP POST: `post_request()`{-}
 
 ```{r request-2}
 s_obj |>
-  stac_search(collections = c("CB4_64_16D_STK-1", "S2-16D-2"),
-              datetime = "2021-01-01/2021-01-31",
-              limit = 400) |>
+  stac_search(
+    collections = c("CB4_64_16D_STK-1", "S2-16D-2"),
+    datetime = "2021-01-01/2021-01-31",
+    limit = 400) |>
   post_request()
 ```
 
@@ -150,36 +153,37 @@ s_obj |>
   post_request(config = c(httr::add_headers("x-api-key" = "MY-KEY")))
 ```
 
-## Visualization of the documents
+## Visualization of the documents{-}
 
 Each `rstac` object is mapped according to the endpoints of the STAC spec. In this way, each object has a different view. The format for viewing objects is in **Markdown**.
 
-#### `STACCatalog` object
+#### `STACCatalog` object{-}
 
-```{r}
-s_obj %>% get_request()
+```{r catalog}
+s_obj |> 
+  get_request()
 ```
 
-#### `STACCollection` object
+#### `STACCollection` object{-}
 
-```{r}
+```{r collection}
 s_obj |>
   collections("S2-16D-2") |>
   get_request()
 ```
 
-#### `STACItem` object
+#### `STACItem` object{-}
 
-```{r}
+```{r item}
 s_obj |>
   collections("CB4_64_16D_STK-1") |>
   items(feature_id = "CB4_64_16D_STK_v001_021027_2020-07-11_2020-07-26") |>
   get_request()
 ```
 
-#### `STACItemCollection` object
+#### `STACItemCollection` object{-}
 
-```{r}
+```{r item-collection}
 s_obj |> 
   stac_search(collections = c("CB4_64_16D_STK", "S2-16D-2")) |>
   get_request()
@@ -188,7 +192,7 @@ s_obj |>
 
 Besides, the `rstac` package provides several auxiliary functions for `STACItem` and `STACItemCollection` objects. These auxiliary functions operate at the item or asset level. Functions dedicated to items have the prefix `items_`. Otherwise, asset-oriented functions have the prefix `assets_`
 
-## Items functions
+## Items functions{-}
 
 The `STACItemCollection` object have some facilitating functions to manipulate/extract information, for example:
 
@@ -202,52 +206,57 @@ The `STACItemCollection` object have some facilitating functions to manipulate/e
 
 It is interesting to verify the fields of items before filtering:
 
-```{r}
+```{r fields}
 s_obj |>
-  stac_search(collections = "CB4_64_16D_STK-1",
-              datetime = "2019-01-01/2019-12-31",
-              limit = 100) |> 
+  stac_search(
+    collections = "CB4_64_16D_STK-1",
+    datetime = "2019-01-01/2019-12-31",
+    limit = 100) |> 
   post_request() |>
   items_fields(field = "properties")
 ```
 
 Let's filter items that have the percentage of clouds smaller than 10%:
 
-```{r}
+```{r filter}
 s_obj |>
-  stac_search(collections = "CB4_64_16D_STK-1",
-              datetime = "2019-01-01/2019-12-31",
-              limit = 100) |> 
+  stac_search(
+    collections = "CB4_64_16D_STK-1",
+    datetime = "2019-01-01/2019-12-31",
+    limit = 100) |> 
   post_request() |>
   items_filter(properties$`eo:cloud_cover` < 10)
 ```
 Number of items returned in the query (in this case equal to the limit defined as parameter):
 
-```{r}
+```{r length}
 s_obj |>
-  stac_search(collections = "CB4_64_16D_STK-1",
-              datetime = "2019-01-01/2019-12-31",
-              limit = 100) |> 
+  stac_search(
+    collections = "CB4_64_16D_STK-1",
+    datetime = "2019-01-01/2019-12-31",
+    limit = 100) |> 
   post_request() |>
   items_length()
 ```
 Number of matched items in the query:
 
-```{r}
+```{r matched}
 s_obj |>
-  stac_search(collections = "CB4_64_16D_STK-1",
-              datetime = "2019-01-01/2019-12-31",
-              limit = 100) |>
+  stac_search(
+    collections = "CB4_64_16D_STK-1",
+    datetime = "2019-01-01/2019-12-31",
+    limit = 100) |>
   post_request() |>
   items_matched()
 ```
 Paginating all items that were matched in the query:
 
-```{r}
+```{r fetch}
 items_fetched <- s_obj |>
-  stac_search(collections = "CB4_64_16D_STK-1",
-              datetime = "2019-01-01/2019-12-31",
-              limit = 500) |>
+  stac_search(
+    collections = "CB4_64_16D_STK-1",
+    datetime = "2019-01-01/2019-12-31",
+    limit = 500) |>
   post_request() |>
   items_fetch()
 
@@ -255,18 +264,18 @@ items_fetched
 ```
 Note that the 1127 has been recovered:
 
-```{r}
+```{r length-2}
 items_length(items_fetched)
 ```
 
 Listing the assets of the retrieved items:
 
-```{r}
+```{r assets}
 items_assets(items_fetched)
 ```
 
 
-## Assets functions
+## Assets functions{-}
 
 - **`assets_download()`:**  Downloads the assets provided by the STAC API.
 - **`assets_url()`:** Returns a character vector with each asset href. 
@@ -279,53 +288,54 @@ For the URL you can add the GDAL library drivers for the following schemes:
 
 Listing the assets names of all items:
 
-```{r}
+```{r assets-2}
 s_obj |>
-  stac_search(collections = "CB4_64_16D_STK-1",
-              datetime = "2019-01-01/2019-12-31",
-              limit = 10) |>
+  stac_search(
+    collections = "CB4_64_16D_STK-1",
+    datetime = "2019-01-01/2019-12-31",
+    limit = 10) |>
   post_request() |>
   items_assets()
 ```
 
 Selecting assets that have names `"BAND14"` and `"NDVI"`
 
-```{r}
+```{r assets-select}
 selected_assets <- s_obj |>
-  stac_search(collections = "CB4_64_16D_STK-1",
-              datetime = "2019-01-01/2019-12-31",
-              limit = 10) |>
+  stac_search(
+    collections = "CB4_64_16D_STK-1",
+    datetime = "2019-01-01/2019-12-31",
+    limit = 10) |>
   post_request() |>
   assets_select(asset_names = c("BAND14", "NDVI"))
 ```
 
-```{r}
+```{r assets-3}
 items_assets(selected_assets)
 ```
 
 Listing asset urls from the selected bands:
 
-```{r}
-selected_assets |> assets_url()
+```{r assets-url}
+selected_assets |> 
+  assets_url()
 ```
 
 Renaming assets using the pattern `<old-name> = <new-name>`
 
-```{r}
-renamed_assets <- selected_assets |> assets_rename(BAND14 = "B14")
+```{r assets-renamed}
+renamed_assets <- selected_assets |> 
+  assets_rename(BAND14 = "B14")
 renamed_assets
 ```
 
 In the `assets` field of the output it can be seen that the asset's name has changed.
 It is also possible to check the asset names using the `items_assets()` function.
 
-```{r}
+```{r assets-4}
 items_assets(renamed_assets)
 ```
 
+# Conclusion{-}
 
-
-## References
-
-- [1] https://stacspec.org/
-- [2] https://github.com/brazil-data-cube/rstac
+The `rstac` package can be useful for querying and working with satellite imagery data from STAC APIs. It offers a simple interface for searching STAC items, exploring the results, and working with assets. Additional functionalities include reading and plotting preview images. This tutorial has provided a short introduction on how to use the package. For more about CQL2 in `rstac`, type the command `?ext_filter`.
