--- a/vignettes/03-cql2-mpc-examples.Rmd
+++ b/vignettes/03-cql2-mpc-examples.Rmd
@@ -14,21 +14,28 @@ fontsize: 10,5pt
 indent: yes
 link-citations: yes
 vignette: >
-  %\VignetteIndexEntry{cql2-mpc-examples}
+  %\VignetteIndexEntry{Reading Planetary Computer Data using CQL2 filter extension}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
+is_online <- tryCatch({
+  res <- httr::GET("https://planetarycomputer.microsoft.com/api/stac/v1")
+  !httr::http_error(res)
+}, error = function(e) {
+  FALSE
+})
+
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
-  cache = TRUE
+  eval = is_online
 )
 ```
 
 
-```{r load-rstac}
+```{r load-rstac, eval=TRUE}
 library(rstac)
 ```
 
@@ -42,8 +49,9 @@ This tutorial is based on [reading STAC API data in Python](https://planetarycom
 
 To access Planetary Computer STAC API, we'll create a `rstac` query.
 
-```{r connection}
+```{r connection, eval=TRUE}
 planetary_computer <- stac("https://planetarycomputer.microsoft.com/api/stac/v1")
+planetary_computer
 ```
 
 ## Listing supported properties in CQL2{-}
@@ -79,7 +87,7 @@ stac_items <- planetary_computer |>
 
 In that example, our filter expression used a temporal (`t_intersects`) and a spatial (`s_intersects`) operators. `t_intersects()` only accepts interval as it second argument, which we created using function `cql2_interval()`. `s_intersects()` spatial operator only accepts GeoJSON objects as its arguments. This is why we had to convert the bounding box vector (`bbox`) into a structure representing a GeoJSON object using the function `cql2_bbox_as_geojson()`. We embrace the arguments using `{{` to evaluate them before make the request.
 
-`items` is a `STACItemCollection` object containing `r items_length(stac_items)` items that matched our search criteria.
+`items` is a `STACItemCollection` object containing 8 items that matched our search criteria.
 
 ```{r items-length}
 stac_items
@@ -127,7 +135,18 @@ purrr::map_dfr(items_assets(selected_item), function(key) {
 
 Here, we’ll inspect the `rendered_preview` asset. To plot this asset, we can use the helper function `preview_plot()` and provide a URL to be plotted. We use the function `assets_url()` to get the URL. This function extracts all available URLs in items.
 
-```{r asset-preview}
+```{r asset-preview-check, eval=TRUE, include=FALSE, echo=FALSE}
+is_accessible <- is_online && tryCatch({
+  res <- httr::HEAD(
+    assets_url(selected_item, asset_names = "rendered_preview")
+  )
+  !httr::http_error(res)
+}, error = function(e) {
+  FALSE
+})
+```
+
+```{r asset-preview, eval=is_accessible}
 selected_item$assets[["rendered_preview"]]$href
 
 selected_item |> 
@@ -170,7 +189,7 @@ We can load up that single COG file using packages like [stars](https://github.c
 library(stars)
 selected_item |> 
   assets_url(asset_names = "blue", append_gdalvsi = TRUE) |>
-  stars::read_stars(RasterIO = list(nBufXSize = 512, nBufYSize = 512)) |>
+  stars::read_stars(RasterIO = list(nBufXSize = 1024, nBufYSize = 1024)) |>
   plot(main = "blue")
 ```
 
@@ -210,7 +229,7 @@ stac_items |>
 
 `STACItem` objects are features of `STACItemCollection` and store information about assets.
 
-```{r }
+```{r items-fetch}
 stac_items <- planetary_computer |>
   ext_filter(
     collection == "sentinel-2-l2a" &&
@@ -287,7 +306,6 @@ Just like assets on items, these assets include links to data in Azure Blob Stor
 ```{r daymet-assets}
 items_assets(daymet)
 
-library(stars)
 daymet |>
   assets_select(asset_names = "zarr-abfs") |>
   assets_url()
