--- a/vignettes/rstac-01-intro.Rmd
+++ b/vignettes/rstac-01-intro.Rmd
@@ -354,7 +354,7 @@ is_accessible <- is_online && tryCatch({
 })
 ```
 
-```{r plot-preview, eval=is_accessible}
+```{r plot-preview, eval=is_accessible, fig.height=3, fig.width=5}
 second_item <- items_fetched$features[[2]]
 second_item |>
   assets_url(asset_names = "thumbnail") |>
